#VERSION 0.8.3#

 - added methods __construct() and _jsonError()(PHP 5.3) to Peak_Config_Json

 - added method postRender() in Peak_Controller_Front and fixed render() in Peak_Application

 - fixed method dispatch() of Peak_Controller_Front when dispatching the default controller 

 - added property $error_controller and method errorDispatch() in Peak_Controller_Front

 - deleted deprecated classes Peak_Core_Extension_Codegen, Peak_Core_Extension_Configs and Peak_Core_Extension_Lang

 - rewrited Peak_Codegen_Controller class to use Peak_Codegen_Class

 - rewrited Peak_Codegen_Bootstrap class to use Peak_Codegen_Class

 - fixed minor problem with methods generate() in Peak_codegen_Class_Method, Peak_codegen_Class_Property and
   Peak_codegen_Class_Param

 - added constants INDENTATION_SPACE and LINE_BREAK to Peak_Codegen

 - added classes Peak_Codegen_Class, Peak_codegen_Class_Constant, Peak_codegen_Class_Docblock, Peak_codegen_Class_Element, 
   Peak_codegen_Class_Method, Peak_codegen_Class_Param, Peak_codegen_Class_Property

 - fixed Peak_Application so that it is no longer a singleton and removing $_instance and getInstance()

 - renamed property $allow_internal_controller to plural in Peak_Controller_Front and fixed method _registryConfig() to force
   boolean conversion for this property. 

 - deleted deprecated class Peak_Utils

 - fixed methods __construct() and __call() of Peak_Core to use getEnv() instead of deprecated constant DEV_MODE

 - fixed bug in Peak_Helpers::__get() by changing include for include_once

 - moved method _arrayMergeRecursive() from Peak_COnfig_Ini to Peak_Config, rename to arrayMergeRecursive() and changed
   visibility to public. fixed Peak_Core::initConfig() accordingly.

 - fixed Peak_View::iniVar() to not use '#' in ini file (# deprecated in 5.3) and to support loading a 
   ini file from a custom path. Variables used inside key value use syntax like $[myvar]. 
